--- a/lib/brexit_checker/questions.yaml
+++ b/lib/brexit_checker/questions.yaml
@@ -181,7 +181,7 @@ questions:
   - key: do-you-own-a-business
     type: "single"
     caption: About your business
-    text: "Do you own or help to run a UK business or organisation?"
+    text: "Do you own or help to run a business or organisation?"
     description: |
       <p>This includes sole traders (self-employed), limited companies, and small and medium enterprises.</p>
     detail_text: |
@@ -193,10 +193,24 @@ questions:
       - label: "No"
         value: does-not-own-operate-business-organisation
 
-  - key: employ-eu-citizens
+  - key: business-uk-or-eu
+    type: "single"
     caption: About your business
     criteria:
       - owns-operates-business-organisation
+    text: "Where is your business or organisation registered?"
+    options:
+      - label: "UK"
+        value: owns-operates-business-organisation-uk
+      - label: "EU"
+        value: owns-operates-business-organisation-eu
+      - label: "Somewhere else"
+    value: owns-operates-business-organisation-row
+
+  - key: employ-eu-citizens
+    caption: About your business
+    criteria:
+      - owns-operates-business-organisation-uk
     type: "single"
     text: "Do you employ anyone from another European country?"
     description: |
@@ -209,7 +223,7 @@ questions:
 
   - key: personal-data
     criteria:
-      - owns-operates-business-organisation
+      - owns-operates-business-organisation-uk
     caption: About your business
     type: "single_wrapped"
     text: "Do you exchange personal data with another organisation in Europe?"
@@ -231,7 +245,7 @@ questions:
 
   - key: eu-uk-government-funding
     criteria:
-      - owns-operates-business-organisation
+      - owns-operates-business-organisation-uk
     caption: About your business
     type: "single"
     text: "Do you get EU or UK government funding?"
@@ -245,7 +259,7 @@ questions:
 
   - key: public-sector-procurement
     criteria:
-      - owns-operates-business-organisation
+      - owns-operates-business-organisation-uk
     caption: About your business
     type: "single_wrapped"
     text: "Do you sell your products or services to the UK public sector?"
@@ -264,7 +278,7 @@ questions:
 
   - key: intellectual-property
     criteria:
-      - owns-operates-business-organisation
+      - owns-operates-business-organisation-uk
     caption: About your business
     type: "single_wrapped"
     text: "Do you use or rely on intellectual property (IP) protection?"
@@ -289,7 +303,7 @@ questions:
 
   - key: business-activity
     criteria:
-      - owns-operates-business-organisation
+      - owns-operates-business-organisation-uk
     caption: About your business
     type: "multiple"
     text: "Does your business or organisation do any of the following?"
@@ -307,7 +321,7 @@ questions:
 
   - key: sector-business-area
     criteria:
-      - owns-operates-business-organisation
+      - owns-operates-business-organisation-uk
     caption: About your business
     type: "multiple_grouped"
     text: "What does your business or organisation do?"
