Add new EU website checker question
Adds "Do you run a website with a .eu domain?" question as per:
https://trello.com/c/8A3uBmBj/292-new-checker-question-create-do-you-run-a-website-with-a-eu-domain-question-in-checker

--- a/lib/brexit_checker/criteria.yaml
+++ b/lib/brexit_checker/criteria.yaml
@@ -234,3 +234,7 @@ criteria:
   text: You do not travel to the EU for business
 - key: retired
   text: You are retired or semi-retired
+- key: eu-domain
+  text: You run a website with a .eu domain
+- key: eu-domain-no
+  text: You do not run a website with a .eu domain
