Add new return to the UK checker question
Adds "Do you plan to move to the EU or visit for more than 90 days?" question as per:
https://trello.com/c/rzP0yc5Z/285-new-checker-question-do-you-plan-to-move-to-the-eu-or-visit-for-more-than-90-days-question-in-checker?menu=filter&filter=member:sihugh

--- a/lib/brexit_checker/criteria.yaml
+++ b/lib/brexit_checker/criteria.yaml
@@ -238,3 +238,7 @@ criteria:
   text: You run a website with a .eu domain
 - key: eu-domain-no
   text: You do not run a website with a .eu domain
+- key: move-to-eu
+  text: You plan to move to the EU
+- key: move-to-eu-no
+  text: You do not plan to move to the EU
