Add "trade with developing countries" checkbox
Also amends "Transporting" to "Transport" as per: https://trello.com/c/MtPhdN8A/291-new-checkbox-for-does-your-business-or-organisation-do-any-of-the-following-question-in-checker

--- a/lib/brexit_checker/criteria.yaml
+++ b/lib/brexit_checker/criteria.yaml
@@ -242,3 +242,5 @@ criteria:
   text: You plan to move to the EU
 - key: move-to-eu-no
   text: You do not plan to move to the EU
+- key: trade-developing
+  text: Your business trades with developing countries
