Amend EU funding question
The current wording of the question is misleading as there is no UK government funding to tell users about.

https://trello.com/c/QxhAjTEH/299-amend-do-you-get-eu-or-uk-government-funding-question-in-checker

--- a/lib/brexit_checker/questions.yaml
+++ b/lib/brexit_checker/questions.yaml
@@ -266,9 +266,9 @@ questions:
       - owns-operates-business-organisation-uk
     caption: About your business
     type: "single"
-    text: "Do you get EU or UK government funding?"
+    text: "Do you plan to apply for EU funding?"
     description: |
-      <p>This includes funding like Erasmus+ and Horizon 2020.</p>
+      <p>This includes funding like Horizon 2020.</p>
     options:
       - label: "Yes"
         value: eu-uk-funding
