Add new transport through NI checkbox
THere will be new actions for this criterion.

https://trello.com/c/V55serq5/298-new-ni-checkbox-for-does-your-business-or-organisation-do-any-of-the-following-question-in-checker

--- a/lib/brexit_checker/criteria.yaml
+++ b/lib/brexit_checker/criteria.yaml
@@ -244,3 +244,5 @@ criteria:
   text: You do not plan to move to the EU
 - key: trade-developing
   text: Your business trades with developing countries
+- key: move-goods-ni
+  text: Your business moves goods into, out of, or through Northern Ireland
