Add new grouping for Common Travel Area
This is added in advance of content that applies to this category.

https://trello.com/c/mtqrgCou/301-create-results-page-grouping-for-common-travel-area

--- a/lib/brexit_checker/groups.yaml
+++ b/lib/brexit_checker/groups.yaml
@@ -18,3 +18,5 @@ groups:
   heading: Studying in the EU
 - key: studying-uk
   heading: Studying in the UK
+- key: common-travel-area
+  heading: Common Travel Area
