Add "Export to rest of the world" question
The new checkbox will be "Export to the rest of the world". [See mock up.](https://trello.com/c/mH3XvRSM/312-new-checkbox-for-trading-with-rest-of-the-world)

The new criteria key is `export-to-row`

--- a/lib/brexit_checker/criteria.yaml
+++ b/lib/brexit_checker/criteria.yaml
@@ -246,3 +246,5 @@ criteria:
   text: Your business trades with developing countries
 - key: move-goods-ni
   text: Your business moves goods into, out of, or through Northern Ireland
+- key: export-to-row
+  text: Your business exports goods to the rest of the world
