Add new notifications for actions
These are all additions as per https://trello.com/c/xjgsDfQf/311-checker-actions-bulk-update-10-july

This enables us to [send notifications](https://github.com/alphagov/finder-frontend/blob/master/docs/brexit-checker-content-changes.md#adding-notifications)

--- a/lib/brexit_checker/notifications.yaml
+++ b/lib/brexit_checker/notifications.yaml
@@ -196,3 +196,27 @@ notifications:
      type: addition
      action_id: S041
      date: 2020-07-01
+   - uuid: "5aeec364-f29d-421a-a426-20d52bf38c84"
+     type: addition
+     action_id: T106
+     date: 2020-07-10
+   - uuid: "cae8a3fa-80cc-4c32-97b4-f09b7693f35b"
+     type: addition
+     action_id: T107
+     date: 2020-07-10
+   - uuid: "07cfdc74-0270-4f01-aea8-2eb1da5d5b74"
+     type: addition
+     action_id: T108
+     date: 2020-07-10
+   - uuid: "1b3908d9-dfb7-48cb-9352-e0e66cb91806"
+     type: addition
+     action_id: T109
+     date: 2020-07-10
+   - uuid: "5dfa9c0c-c987-4860-9ec5-74a14d1291f6"
+     type: addition
+     action_id: T110
+     date: 2020-07-10
+   - uuid: "4ef933d0-7c25-40b6-a6cf-7a7e0fa2c432"
+     type: addition
+     action_id: S039
+     date: 2020-07-10
