Reword question to drop EEA reference
Wording agreed by content designers.

https://trello.com/c/KslhLfiu/328-reword-question-are-you-a-family-member-of-an-eu-eea-or-swiss-citizen

--- a/lib/brexit_checker/questions.yaml
+++ b/lib/brexit_checker/questions.yaml
@@ -167,7 +167,8 @@ questions:
   - key: family-eu
     type: single
     caption: About you and your family
-    text: 'Are you a family member of an EU, EEA or Swiss citizen?'
+    text: 'Are you a family member of an EU citizen?'
+    hint_text: 'This also includes Switzerland, Norway, Iceland and Liechtenstein.'
     criteria:
       all_of:
         - nationality-row
