Remove jasmine-rails gem
The jasmine-rails gem is no longer actively maintained searls/jasmine-rails#238, so
switching to the jasmine gem and jasmine_selenium_runner (for headless Chrome).

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -20,7 +20,7 @@ updates:
       # Framework gems
       - dependency-name: factory_bot
         dependency-type: direct
-      - dependency-name: jasmine-rails
+      - dependency-name: jasmine
         dependency-type: direct
       - dependency-name: rails
         dependency-type: direct
