--- a/app/lib/brexit_checker/actions.yaml
+++ b/app/lib/brexit_checker/actions.yaml
@@ -1493,3 +1493,14 @@ actions:
   criteria:
   - chemical
   audience: business
+- id: T117
+  priority: 3
+  title: Contact your regulator if you are a UK lawyer working permanently in the EU, Norway, Iceland or Liechtenstein
+  consequence: You risk not being able to continue providing legal services in the same way if you do not meet new requirements.
+  guidance_link_text: UK laywers practising in the EU, Norway, Iceland or Liechtenstein from 1 January 2021
+  guidance_url: https://www.gov.uk/government/publications/uk-lawyers-practising-in-the-eu-norway-iceland-or-liechtenstein-from-1-january-2021/uk-lawyers-practising-in-the-eu-norway-iceland-or-liechtenstein-after-1-january-2021
+  criteria:
+  - all_of:
+    - working-eu
+    - legal-service
+  audience: business
