Remove UK from question details
There is another question referring to business location, so we don't need
to reference it here.

https://trello.com/c/3r7emRTv/416-update-details-component-content-on-first-business-question?menu=filter&filter=label:Development

--- a/app/lib/brexit_checker/questions.yaml
+++ b/app/lib/brexit_checker/questions.yaml
@@ -204,8 +204,8 @@ questions:
     description: |
       <p>This includes sole traders (self-employed), limited companies, and small and medium enterprises.</p>
     detail_text: |
-      <p>From 1 January 2021, rules for UK businesses and organisations will change.</p>
-      <p>We need to know if you own or help to run a UK business or organisation so we can show you what you need to do to prepare for the new rules.</p>
+      <p>From 1 January 2021, rules for businesses and organisations will change.</p>
+      <p>We need to know if you own or help to run a business or organisation so we can show you what you need to do to prepare for the new rules.</p>
     options:
       - label: "Yes"
         value: owns-operates-business-organisation
