--- a/app/lib/brexit_checker/groups.yaml
+++ b/app/lib/brexit_checker/groups.yaml
@@ -2,21 +2,31 @@
 groups:
 - key: visiting-eu
   heading: Visiting the EU
+  priority: 9
 - key: visiting-uk
   heading: Visiting the UK
+  priority: 8
 - key: visiting-ie
   heading: Visiting Ireland
+  priority: 7
 - key: living-eu
   heading: Living in the EU
+  priority: 6
 - key: living-ie
   heading: Living in Ireland
+  priority: 6
 - key: living-uk
   heading: Living in the UK
+  priority: 6
 - key: working-uk
   heading: Working in the UK
+  priority: 5
 - key: studying-eu
   heading: Studying in the EU
+  priority: 4
 - key: studying-uk
   heading: Studying in the UK
+  priority: 3
 - key: common-travel-area
   heading: Common Travel Area
+  priority: 1
