--- a/app/lib/brexit_checker/actions.yaml
+++ b/app/lib/brexit_checker/actions.yaml
@@ -205,14 +205,14 @@ actions:
   grouping_criteria:
   - living-uk
 - id: S015
-  priority: 5
+  priority: 2
   title: To get free NHS healthcare, prove that you've returned to the UK to live
     and you meet the ordinary residence test
   consequence: If you cannot prove you meet the ordinary residence test, you may be
     charged for NHS services.
   guidance_prompt: More information
-  guidance_link_text: Living in Europe
-  guidance_url: https://www.gov.uk/guidance/living-in-europe#uk-nationals-in-the-eu
+  guidance_link_text: Using the NHS when you return to live in the UK
+  guidance_url: https://www.gov.uk/guidance/using-the-nhs-when-you-return-to-live-in-the-uk
   criteria:
   - all_of:
     - nationality-uk
@@ -295,21 +295,6 @@ actions:
   audience: citizen
   grouping_criteria:
   - studying-eu
-- id: S028
-  priority: 2
-  title: Check with your local council that you're eligible for housing services if
-    you’re returning to the UK from the EU
-  consequence: You may not be able to apply for housing services if you are not eligible.
-  guidance_prompt: More information
-  guidance_link_text: Council housing
-  guidance_url: https://www.gov.uk/council-housing
-  criteria:
-  - all_of:
-    - nationality-uk
-    - return-to-uk
-  audience: citizen
-  grouping_criteria:
-  - living-uk
 - id: S029
   priority: 11
   title: Find out how to apply to be a resident in the EU country you live in
@@ -472,11 +457,9 @@ actions:
   audience: business
 - id: T012
   priority: 5
-  title: Check if you need the permission of the intellectual copyright holder to
-    continue to parallel export IP-protected goods from the UK to the EU, Norway,
-    Iceland or Liechtenstein
-  consequence: You risk not being able to continue to parallel export IP-protected
-    products from the UK to these locations if you do not have permission.
+  title: Check the new rules for parallel exporting IP protected goods from the UK
+    to the EU, Norway, Iceland and Liechtenstein
+  consequence: You may infringe on IP rights if you do not follow the new rules.
   guidance_prompt: More information
   guidance_link_text: Exhaustion of IP rights and parallel trade from 1 January 2021
   guidance_url: https://www.gov.uk/guidance/exhaustion-of-ip-rights-and-parallel-trade-after-the-transition-period
@@ -824,7 +807,7 @@ actions:
   title: Get an International Maritime Organisation (IMO) number if your fishing boat
     is 12 metres or longer
   title_url: https://imonumbers.ihs.com/
-  consequence: If your boat is 12 metres or longer, you wil not be allowed to to fish
+  consequence: If your boat is 12 metres or longer, you will not be allowed to fish
     in EU, Norwegian or Faroese waters without an IMO number.
   guidance_prompt: More information
   guidance_link_text: Prepare your fisheries business for 2021
@@ -893,15 +876,15 @@ actions:
     - telecoms
   audience: business
 - id: T059
-  priority: 5
+  priority: 2
   title: Check whether any wood packaging you use meets ISPM15 international standards
   consequence: You may not be able to export using wood packaging that is not ISPM15
     certified.
   guidance_prompt: More information
-  guidance_link_text: Wood packaging goods for import and export
-  guidance_url: https://www.gov.uk/wood-packaging-import-export
+  guidance_link_text: Movement of wood packaging material from 2021
+  guidance_url: https://www.gov.uk/guidance/importing-and-exporting-plants-and-plant-products-from-1-january-2021#movement-of-wood-packaging-material
   criteria:
-  - forestry
+  - export-to-eu
   audience: business
 - id: T063
   priority: 6
@@ -1009,13 +992,13 @@ actions:
   audience: business
 - id: T080
   priority: 5
-  title: Disclose your designs if you want unregistered protection in the UK and EU
-  consequence: If you do not do this you’ll only have protection where you first showed
-    your design, either the UK or the EU.
+  title: Check the new rules for unregistered design protection in the UK and EU
+  consequence: You may not have IP protection if you do not disclose your designs
+    correctly.
   guidance_prompt: More information
   guidance_link_text: Changes to EU and international designs and trade mark protection
     from 1 January 2021
-  guidance_url: https://www.gov.uk/guidance/changes-to-unregistered-designs-after-the-transition-period
+  guidance_url: https://www.gov.uk/guidance/changes-to-eu-and-international-designs-and-trade-mark-protection-after-the-transition-period
   criteria:
   - any_of:
     - ip-copyright
@@ -1286,7 +1269,7 @@ actions:
   consequence: You risk penalties and your goods not getting through customs if you
     do not pay the correct tariff.
   guidance_prompt: More information
-  guidance_link_text: Check UK trade tariffs from 1 January 2021
+  guidance_link_text: UK tariffs from 1 January 2021
   guidance_url: https://www.gov.uk/guidance/uk-tariffs-from-1-january-2021
   criteria:
   - import-from-eu
@@ -1421,7 +1404,7 @@ actions:
   - move-goods-ni
   audience: business
 - id: T109
-  priority: 8
+  priority: 10
   title: Get ready to export to the EU from 1 January 2021
   title_url: https://www.gov.uk/prepare-to-export-from-great-britain-from-january-2021
   consequence: You will not be able to export goods to the EU unless you follow the
@@ -1430,7 +1413,7 @@ actions:
   - export-to-eu
   audience: business
 - id: T110
-  priority: 8
+  priority: 10
   title: Get ready to import goods from the EU from 1 January 2021
   title_url: https://www.gov.uk/prepare-to-import-to-great-britain-from-january-2021
   consequence: You will not be able to import goods from the EU without following
@@ -1441,16 +1424,25 @@ actions:
 - id: T111
   priority: 6
   title: Check if you need to replace your .eu domain name
-  title_url: https://www.gov.uk/guidance/eu-domain-names-what-you-need-to-do-to-get-ready-for-brexit
-  consequence: You may not be able to hold, register or renew a .eu domain name from 1 January 2021.
+  consequence: You may not be able to hold, register or renew a .eu domain name from
+    1 January 2021.
+  guidance_prompt: More information
+  guidance_link_text: ".eu domain names - what you need to do before the end of the
+    transition period"
+  guidance_url: https://www.gov.uk/guidance/eu-domain-names-what-you-need-to-do-to-get-ready-for-brexit
   criteria:
   - eu-domain
   audience: business
 - id: T112
   priority: 8
-  title: Register for the UK’s new Import of Products, Animals, Food and Feed System (IPAFFS)
-  title_url: https://www.gov.uk/guidance/importing-animals-animal-products-and-high-risk-food-and-feed-not-of-animal-origin-from-1-january-2021
-  consequence: You will not be able to import using the TRACES system from 1 January 2021.
+  title: Register for the UK’s new Import of Products, Animals, Food and Feed System
+    (IPAFFS)
+  consequence: You will not be able to import using the TRACES system from 1 January
+    2021.
+  guidance_prompt: More information
+  guidance_link_text: Importing animals, animal products and high-risk food and feed
+    not of animal origin from 1 January 2021
+  guidance_url: https://www.gov.uk/guidance/importing-animals-animal-products-and-high-risk-food-and-feed-not-of-animal-origin-from-1-january-2021
   criteria:
   - all_of:
     - import-from-eu
@@ -1461,17 +1453,25 @@ actions:
   audience: business
 - id: T113
   priority: 2
-  title: Check the rules for reporting unfair trade practices using the UK's new trade remedies service
-  title_url: https://www.gov.uk/guidance/applying-for-a-trade-remedies-investigation
-  consequence: You risk being affected if imported goods are dumped on the UK market or are benefiting from subsidies – or if there is a sudden increase in imports to the UK of a certain product.
+  title: Check the rules for reporting unfair trade practices using the UK's new trade
+    remedies service
+  consequence: You risk being affected if imported goods are dumped on the UK market
+    or are benefiting from subsidies – or if there is a sudden increase in imports
+    to the UK of a certain product.
+  guidance_prompt: More information
+  guidance_link_text: Applying for a trade remedies investigation
+  guidance_url: https://www.gov.uk/guidance/applying-for-a-trade-remedies-investigation
   criteria:
   - owns-operates-business-organisation-uk
   audience: business
 - id: T114
   priority: 2
-  title: Check if there's a trade agreement with any non-EU country you're planning to trade with from 1 January 2021
-  title_url: https://www.gov.uk/guidance/uk-trade-agreements-with-non-eu-countries
+  title: Check if there's a trade agreement with any non-EU country you're planning
+    to trade with from 1 January 2021
   consequence: You risk disruption to your trading arrangements and unexpected costs.
+  guidance_prompt: More information
+  guidance_link_text: Existing UK trade agreements with non-EU countries
+  guidance_url: https://www.gov.uk/guidance/uk-trade-agreements-with-non-eu-countries
   criteria:
   - any_of:
     - trade-developing
@@ -1479,28 +1479,65 @@ actions:
   audience: business
 - id: T115
   priority: 1
-  title: Register with HSE to find out when guidance on the duties for classifying, labelling and packaging chemicals for the GB market is available
-  title_url: https://www.hse.gov.uk/brexit/chemicals-brexit-guidance.htm?utm_source=gov.uk&utm_medium=referral&utm_campaign=eu-transition&utm_content=checker-tool
-  consequence: You must make sure chemicals are classified, labelled and packaged according to GB regulations.
+  title: Register with HSE to find out when guidance on the duties for classifying,
+    labelling and packaging chemicals for the GB market is available
+  consequence: You must make sure chemicals are classified, labelled and packaged
+    according to GB regulations.
+  guidance_prompt: More information
+  guidance_link_text: 'Brexit: Chemicals industry guidance'
+  guidance_url: https://www.hse.gov.uk/brexit/chemicals-brexit-guidance.htm?utm_source=gov.uk&utm_medium=referral&utm_campaign=eu-transition&utm_content=checker-tool
   criteria:
   - chemical
   audience: business
 - id: T116
   priority: 1
-  title: Register with HSE to find out when guidance on processes for biocidal active substance approval and product authorisation is available
-  title_url: https://www.hse.gov.uk/brexit/chemicals-brexit-guidance.htm?utm_source=gov.uk&utm_medium=referral&utm_campaign=eu-transition&utm_content=checker-tool
-  consequence: You may have delays in getting access to the right materials to continue with your work.
+  title: Register with HSE to find out when guidance on processes for biocidal active
+    substance approval and product authorisation is available
+  consequence: You may have delays in getting access to the right materials to continue
+    with your work.
+  guidance_prompt: More information
+  guidance_link_text: 'Brexit: Chemicals industry guidance'
+  guidance_url: https://www.hse.gov.uk/brexit/chemicals-brexit-guidance.htm?utm_source=gov.uk&utm_medium=referral&utm_campaign=eu-transition&utm_content=checker-tool
   criteria:
   - chemical
   audience: business
 - id: T117
   priority: 3
-  title: Contact your regulator if you are a UK lawyer working permanently in the EU, Norway, Iceland or Liechtenstein
-  consequence: You risk not being able to continue providing legal services in the same way if you do not meet new requirements.
-  guidance_link_text: UK laywers practising in the EU, Norway, Iceland or Liechtenstein from 1 January 2021
+  title: Contact your regulator if you are a UK lawyer working permanently in the
+    EU, Norway, Iceland or Liechtenstein
+  consequence: You risk not being able to continue providing legal services in the
+    same way if you do not meet new requirements.
+  guidance_prompt: More information
+  guidance_link_text: UK laywers practising in the EU, Norway, Iceland or Liechtenstein
+    from 1 January 2021
   guidance_url: https://www.gov.uk/government/publications/uk-lawyers-practising-in-the-eu-norway-iceland-or-liechtenstein-from-1-january-2021/uk-lawyers-practising-in-the-eu-norway-iceland-or-liechtenstein-after-1-january-2021
   criteria:
   - all_of:
     - working-eu
     - legal-service
+  audience: business
+- id: T118
+  priority: 4
+  title: Check the rules for providing online services to the EU, Norway, Iceland
+    or Liechtenstein
+  consequence: You may be breaking the law if you do not follow the rules in the country
+    you provide online services to.
+  guidance_prompt: More information
+  guidance_link_text: The eCommerce Directive after the transition period
+  guidance_url: https://www.gov.uk/guidance/ecommerce-directive-what-online-service-providers-in-the-uk-should-do-to-get-ready-for-brexit
+  criteria:
+  - export-to-eu
+  audience: business
+- id: T119
+  priority: 3
+  title: Check if you need to update your copyright licenses to satellite broadcast
+    to the EU
+  consequence: You risk breaking copyright rules if you do not have the right permissions.
+  guidance_prompt: More information
+  guidance_link_text: Changes to copyright law from 1 January 2021
+  guidance_url: https://www.gov.uk/guidance/changes-to-copyright-law-after-the-transition-period
+  criteria:
+  - any_of:
+    - ip-copyright
+    - media
   audience: business
