Add change notification for T118
https://trello.com/c/yZHxxAej/480-action-batch-update-october

As per the [criteria docs](https://docs.google.com/document/d/1YbXLRJ_FkPDvYPC7e4Nkhm054LqFVydn-KX_Th3yFYw/edit#):

Scenario 4 - Update an action’s criteria
----------------------------------------
A change in criteria will not require a change note, but subscribers who did not previously know about this action will be notified. They will receive an “Added” notification. Subscribers who can no longer see the action will not be notified.

Action ID:  abc222
Zendesk ticket link: zendesk.ticket/abc222
Dept contact : A.Person
Scenario: 4
Change note: none

--- a/app/lib/brexit_checker/notifications.yaml
+++ b/app/lib/brexit_checker/notifications.yaml
@@ -253,3 +253,7 @@ notifications:
     type: addition
     action_id: T117
     date: 2020-09-03
+  - uuid: "5399f34f-1c71-4ce5-841c-a84b2598b032"
+    type: addition
+    action_id: T118
+    date: 2020-10-06
